# mcp-dependency-integrity-guardian

./: DESIGN_NOTES.md  README.md  pyproject.toml
docs/: EXAMPLE_OUTPUTS.md
src/mcp_dependency_integrity_guardian/: server.py
