[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-dependency-integrity-guardian"
version = "0.1.0"
description = "Deterministic read-only dependency integrity guardian (lockfiles + pinning checks)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp-dependency-integrity-guardian = "mcp_dependency_integrity_guardian.server:main"

[tool.setuptools.packages.find]
where = ["src"]
